--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 
 <body>
-    <h1> Функція for для чисел Фібоначі</h1>
+    <h1> Цикл для чисел Фібоначі</h1>
     <script src="js/index.js"></script>
     <h1> Масив для чисел Фібоначі</h1>
     <script src="js/ar.js"></script>
